# return42

./: .gitignore  PROJECT_SUMMARY.md  README.md  TODO.md  design-spec.md  docker-compose.cliniclink.yml  docker-compose.observability.yml  pyproject.toml  requirements.md  technical-spec.md
.observability/: agent.yml
cliniclink-desktop/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
cliniclink-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
cliniclink-desktop/src-tauri/capabilities/: default.json
cliniclink-desktop/src-tauri/icons/: icon.icns
cliniclink-desktop/src-tauri/permissions/autogenerated/: get_sidecar_port.toml  has_secret.toml  read_secret.toml  set_mode.toml  sidecar_request.toml  store_secret.toml
cliniclink-desktop/src-tauri/src/: lib.rs  main.rs  secrets.rs  sidecar.rs
dashboards/: return42-observability.json
prometheus/: prometheus.yml
scripts/: Dockerfile.linux-build  build_linux_installer.py  build_macos_installer.py  build_tauri_app.sh  build_windows_installer.iss  emit_dev_metric.py  run_mesh_sandbox.py  run_observability_suite.py
site/: index.html
tests/: conftest.py  test_api.py  test_cli.py  test_cliniclink_ambulance_sync.py  test_cliniclink_api.py  test_cliniclink_cli.py  test_cliniclink_dashboard.py  test_cliniclink_gateway.py  test_cliniclink_imports.py  test_cliniclink_policy.py  test_cliniclink_queue.py  test_cliniclink_store.py  test_desktop_sidecar_api.py  test_desktop_sidecar_mode_switch.py  test_desktop_sidecar_websocket.py  test_dev_collector.py  (+15 more)
(+66 files in other folders)
