[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "return42"
version = "0.1.0"
description = "Resilient edge communication system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "prometheus-client>=0.20.0",
    "pydantic>=2.7.0",
    "typer>=0.12.0",
    "aiomqtt>=2.0.0",
]

[project.scripts]
r42-observe = "return42.observability.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "coverage>=7.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
