[package]
name = "cliniclink-desktop"
version = "1.0.0"
description = "ClinicLink Desktop GUI"
authors = ["TradeMomentum LLC"]
edition = "2021"

[lib]
name = "cliniclink_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "cliniclink-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.5", features = [] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
futures-util = "0.3"
url = "2"
